startet header menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<img *ngIf="showImage" class="img-slideshow" src="assets/img/{{images[currentImage]}}">
+<app-menu></app-menu>
+<app-slideshow></app-slideshow>
